syntax = "proto3";

package fairyring.pep;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "fairyring/pep/params.proto";
import "fairyring/pep/encrypted_tx.proto";
import "fairyring/pep/pep_nonce.proto";
import "fairyring/pep/decryption_key.proto";
import "fairyring/common/shared_types.proto";
import "fairyring/pep/request_id.proto";

option go_package = "github.com/Fairblock/fairyring/x/pep/types";

// GenesisState defines the pep module's genesis state.
message GenesisState {
  
  // params defines all the parameters of the module.
  Params                           params                 = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
  string                           port_id                = 2;
  repeated EncryptedTxArray        encryptedTxArray       = 3 [(gogoproto.nullable) = false] ;
  repeated PepNonce                pepNonceList           = 4 [(gogoproto.nullable) = false] ;
  repeated DecryptionKey           decryption_key_list    = 6 [(gogoproto.nullable) = false];
  fairyring.common.ActivePublicKey activePubKey           = 7 [(gogoproto.nullable) = false];
  fairyring.common.QueuedPublicKey queuedPubKey           = 8 [(gogoproto.nullable) = false];
  uint64                           request_count          = 9;
  repeated RequestId               requestIdList          = 10 [(gogoproto.nullable) = false];
}
